Fixed container and header images on mobile

--- a/components/HeaderImages/styles.module.css
+++ b/components/HeaderImages/styles.module.css
@@ -42,9 +42,4 @@
     .heading {
         position: unset;
     }
-
-
-    .headerImage {
-        background-position: -137em -108em;
-    }
 }
