--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@ figure {
   }
 
   .container {
-    margin-bottom: 2em;
+    padding-bottom: 2em;
   }
 
   .events {
